tests/invalid/mostly_uniq1.err_exp
mostly_uniq1.m:005: In `my_main(di, uo)':
mostly_uniq1.m:005:   error: invalid determinism for a predicate with I/O state
mostly_uniq1.m:005:   arguments.
mostly_uniq1.m:018: In clause for `my_main(di, uo)':
mostly_uniq1.m:018:   in argument 2 of call to predicate `io.write_int/3':
mostly_uniq1.m:018:   mode error: variable `DCG_0' has instantiatedness
mostly_uniq1.m:018:   `mostly_unique',
mostly_uniq1.m:018:   expected instantiatedness was `unique'.
